consolidated code but still getting undefined api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <!-- <a routerLink="/"><h1>Poor Woman's Reddit</h1></a> -->
-<router-outlet></router-outlet>
+<body><router-outlet></router-outlet></body>
