--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -1,7 +1,7 @@
 
-
-<p>Can you see this?</p>
 <div class="post-details">
-    <h2>{{post.title}}</h2>
-    <div class="post-image">{{post.thumbnail}}</div>
-</div>
+    <h2>Title: {{title}}</h2>
+    <div class="post-image">{{thumbnail}}</div>
+    <div class="post-image">Source: {{url}}</div>
+
+</div> 
