--- a/src/app/reddit-post/reddit-post.component.html
+++ b/src/app/reddit-post/reddit-post.component.html
@@ -1,6 +1,7 @@
 <div class="reddit-Post">
     <h1>Poor Woman's Reddit</h1>
-    <app-post-details *ngFor="let post of redditPosts, let i = index;" [title]="post.title" [thumbnail]="post.thumbnail"></app-post-details>
+    <button (click)="callReddit()">API TEST</button>
+    <app-post-details *ngFor="let posts of redditPosts, let i = index;" [title]="posts.title" [thumbnail]="posts.thumbnail"></app-post-details>
 </div>
 
 <!-- [postNumber]="i + 1" -->
