--- a/src/app/post-details/post-details.component.html
+++ b/src/app/post-details/post-details.component.html
@@ -1,7 +1,7 @@
 
-<div class="post-details">
-    <h2>Title: {{title}}</h2>
-    <div class="post-image">{{thumbnail}}</div>
-    <div class="post-image">Source: {{url}}</div>
+<div class="post-details" *ngFor="let posts of redditPosts,">
+    <h2>Title: {{posts.data.title}}</h2>
+    <div class="post-image">{{posts.data.thumbnail}}</div>
+    <div class="post-image">Source: {{posts.data.url}}</div>
 
 </div> 
