--- a/src/app/reddit-post/reddit-post.component.html
+++ b/src/app/reddit-post/reddit-post.component.html
@@ -1,9 +1,5 @@
 <div class="reddit-Post">
-    <h1>Poor Woman's Reddit</h1>
+    <img src="/assets/PRECIOUS.png" alt="Precious Logo">
     <app-post-details></app-post-details>
-    <!-- <h2>{{posts.data.title}}</h2> -->
  
 </div>
-
-<!--  *ngFor="let posts of redditPosts, let i = index;" [title]="posts.title"
-        [thumbnail]="posts.thumbnail" [url]="posts.url"> -->
