--- a/src/app/reddit-post/reddit-post.component.html
+++ b/src/app/reddit-post/reddit-post.component.html
@@ -1,5 +1,5 @@
 <div class="reddit-Post">
-    <img src="/assets/PRECIOUS.png" alt="Precious Logo">
+    <img src="/assets/PRECIOUS.png" alt="Adorbs Logo">
     <app-post-details></app-post-details>
  
 </div>
