--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,8 @@ body {
     display: flex;
 flex-direction: column;
 justify-content: center;
-text-align: center;}
+align-items: center;
+text-align: center;
+margin: none;
+width: auto;
+}
