--- a/src/app/reddit-post/reddit-post.component.css
+++ b/src/app/reddit-post/reddit-post.component.css
@@ -4,3 +4,13 @@ img {
     margin: 0;
     padding: 0;
 }
+
+/*For screens with a width of 640px and shorter*/
+@media screen and (max-width: 400px){
+    img {
+        width: 75%;
+        margin-top: 10px;
+        margin: 0;
+        padding: 0;
+    }
+}
